<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_change_password_mobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_30"
        android:background="@null"
        android:gravity="start|center_vertical"
        android:hint="@string/login_hint_phone_number"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:textColorHint="@color/gray_h"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/et_change_password_mobile"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="?android:attr/listDivider"></View>

    <EditText
        android:layout_marginTop="@dimen/dp_3"
        android:id="@+id/et_change_password_code"
        android:layout_width="@dimen/dp_208"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/view"
        android:layout_marginLeft="@dimen/dp_30"
        android:background="@null"
        android:gravity="start|center_vertical"
        android:hint="@string/login_hint_password_number"
        android:maxLength="11"
        android:maxLines="1"
        android:textColorHint="@color/gray_h"
        android:textSize="16sp" />



    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/et_change_password_code"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="?android:attr/listDivider"></View>

    <CheckBox
        android:id="@+id/checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_9"
        android:button="@drawable/check_box"
        android:checked="true" />

    <TextView
        android:id="@+id/my"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@+id/checked"
        android:text="@string/login_code"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@+id/my"
        android:text="@string/login"
        android:textColor="@color/theme_orange"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_login_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/protocol"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/log_bg"
        android:stateListAnimator="@null"
        android:text="@string/login_btn_login"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_confirm"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/login_profit_detail" />

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_confirm"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:text="@string/login_profit_record" />
</RelativeLayout>
