<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/et_password_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_30"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="start|center_vertical"
            android:hint="@string/login_hint_phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="@color/gray_h"
            android:textSize="16sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@+id/et_password_mobile"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:background="?android:attr/listDivider"></View>

        <EditText
            android:id="@+id/et_change_password_code"
            android:layout_width="@dimen/dp_208"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/view"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_3"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="start|center_vertical"
            android:hint="@string/login_hint_code"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textColorHint="@color/gray_h"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_change_password_get_code"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/view"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_toRightOf="@+id/et_change_password_code"
            android:gravity="center"
            android:text="@string/login_verification_code"
            android:textColor="@color/theme_orange"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_toRightOf="@+id/et_change_password_code"
            android:gravity="center"
            android:textColor="@color/theme_orange"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@+id/btn_change_password_get_code"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:background="?android:attr/listDivider"></View>

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/view1"
            android:layout_marginLeft="@dimen/dp_30"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="start|center_vertical"
            android:hint="@string/forget_pass"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="@color/gray_h"
            android:textSize="16sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@+id/new_pass"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:background="?android:attr/listDivider"></View>

        <EditText
            android:id="@+id/invitation_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/view2"
            android:layout_marginLeft="@dimen/dp_30"
            android:background="@null"
            android:cursorVisible="false"
            android:gravity="start|center_vertical"
            android:hint="@string/code"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="@color/gray_h"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invitation_code"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_9"
            android:button="@drawable/check_box"
            android:checked="true" />

        <TextView
            android:id="@+id/my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invitation_code"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toRightOf="@+id/checked"
            android:text="@string/login_code"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invitation_code"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toRightOf="@+id/my"
            android:text="@string/login"
            android:textColor="@color/theme_orange"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/protocol"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@drawable/log_bg"
            android:stateListAnimator="@null"
            android:text="@string/new_user"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativelayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="第三方登录"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:visibility="gone">

        <ImageView
            android:id="@+id/log_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/qq" />

        <ImageView
            android:id="@+id/log_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_toRightOf="@+id/log_qq"
            android:src="@mipmap/wx" />
    </RelativeLayout>
</RelativeLayout>